Comments can be added and replied.
